Updating Styles - Message list to be correctly responsive - align correctly - some small update for conversation

--- a/src/styles/ConversationBox.module.css
+++ b/src/styles/ConversationBox.module.css
@@ -4,24 +4,26 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     margin: 25px 10px 25px 10px;
-    padding: 10px 25px 10px 25px;
-    flex: 1 0;
+    padding: 15px 25px 15px 25px;
     background-color: white;
+    height: 75px;
+    align-items: center;
 }
 
 .card:hover {
+    cursor: pointer;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .profile {
-    border-radius: 15px;
+    border-radius: 20px;
     margin: 5px;
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-left: 25px;
 }
 
